Code changes for Adding transaction and Delete Transaction

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -105,20 +105,40 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
       <!-- Interests -->
       <div class="w3-card w3-round w3-white w3-hide-small">
         <div class="w3-container">
-          <p>Interests</p>
-          <p>
-            <span class="w3-tag w3-small w3-theme-d5">News</span>
-            <span class="w3-tag w3-small w3-theme-d4">W3Schools</span>
-            <span class="w3-tag w3-small w3-theme-d3">Labels</span>
-            <span class="w3-tag w3-small w3-theme-d2">Games</span>
-            <span class="w3-tag w3-small w3-theme-d1">Friends</span>
-            <span class="w3-tag w3-small w3-theme">Games</span>
-            <span class="w3-tag w3-small w3-theme-l1">Friends</span>
-            <span class="w3-tag w3-small w3-theme-l2">Food</span>
-            <span class="w3-tag w3-small w3-theme-l3">Design</span>
-            <span class="w3-tag w3-small w3-theme-l4">Art</span>
-            <span class="w3-tag w3-small w3-theme-l5">Photos</span>
-          </p>
+          
+            <div class="w3-container w3-display-container w3-padding-16">
+              <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-transparent w3-display-topright"></i>
+              <h3>Add Transaction</h3>              
+              <hr>
+              <form [formGroup]="transactionForm" (ngSubmit)="submit(transactionForm.value)">
+                <p><label for="transactionName">Description</label></p>
+                <input class="w3-input w3-border" type="text" placeholder="" formControlName="transactionName" required>  
+                <p><label for = "transactionCategory" >Category</label></p>
+                <select formControlName="transactionCategory" class="form-control">  
+                  <option selected disabled>Select Category</option>  
+                  <option>Food</option>  
+                  <option>Liqueur</option>  
+                  <option>Travel</option>  
+                  <option>Salary</option>  
+                  <option>Movies</option> 
+                  <option>Entertainment</option>  
+              </select>  
+
+                <p><label for ="transactionType"> Type </label></p>
+                <select formControlName="transactionType" class="form-control">                    
+                  <option selected>Expense</option>  
+                  <option>Income</option>                     
+              </select>        
+                <p><label for="transactionAmount"><i class="fa fa-male"></i> Amount</label></p>
+                <input class="w3-input w3-border" type="number" value="1" formControlName="transactionAmount" min="1" >              
+                <p><label for="transactionDate"><i class="fa fa-calendar-o"></i> Date </label></p>
+                <input class="w3-input w3-border" type="date" placeholder="DD MM YYYY" formControlName="transactionDate" required>
+                <p></p>
+                <p><button class="w3-button w3-block w3-green w3-center-align" type="submit" [disabled]="!transactionForm.valid">   Submit </button></p>
+              </form>
+            </div>
+           
+          
         </div>
       </div>
       <br>
@@ -151,8 +171,8 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
                         <th scope="col">Type</th>
                         <th scope="col">Date of Expense</th>
                         <th scope="col">Amount</th>
-                        <!-- <th>Status</th>
-                        <th>Action</th> -->
+                        <!-- <th>Status</th> -->
+                        <th>Action</th> 
                     </tr>
                 </thead>
                 <tbody>
@@ -162,6 +182,11 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
                         <td>{{transaction.transactionType}}</td>
                         <td>{{transaction.transactionDate | date: 'short': 'IST'}}</td>
                         <td>{{transaction.transactionAmount}}</td>
+                        <td> <button type="button" 
+                          class="btn btn-danger btn-sm" 
+                          (click)="deleteTransaction(transaction.transactionId)">
+                          Delete
+                      </button></td>
                         <!-- <td></td>
                         <td></td> -->
                     </tr>
